examples/GRAMMAR.txt
# GRAMMAR

expr  		: KEYWORD:VAR IDENTIFIER EQUAL expr
			: term ((PLUS|MINUS) term)*

term    	: factor ((MUL|DIV) factor)*

factor		: (PLUS|MINUS) factor
			: power

power		: atom (POW factor)*

atom 		: INT|FLOAT|STRING|IDENTIFIER
			: LPAREN expr RPAREN
